<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.CoinDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivLogoCoin"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="@dimen/margin_label_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tvFromSymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_on_card"
            android:textSize="@dimen/text_size_info_label"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tvSlash"
            app:layout_constraintEnd_toStartOf="@id/tvSlash"
            app:layout_constraintTop_toTopOf="@id/tvSlash"
            tools:text="BTC" />

        <TextView
            android:id="@+id/tvSlash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_label_info"
            android:padding="@dimen/padding_card"
            android:text="@string/slash"
            android:textColor="@color/text_color_on_card"
            android:textSize="@dimen/text_size_info_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLogoCoin" />

        <TextView
            android:id="@+id/tvToSymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_on_card"
            android:textSize="@dimen/text_size_info_label"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tvSlash"
            app:layout_constraintStart_toEndOf="@id/tvSlash"
            app:layout_constraintTop_toTopOf="@id/tvSlash"
            tools:text="USD" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_card"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toBottomOf="@id/tvSlash">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_card"
                android:padding="@dimen/padding_card">

                <TextView
                    android:id="@+id/tvPriceLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_card_top_info"
                    android:paddingStart="@dimen/padding_card"
                    android:paddingEnd="@dimen/padding_card"
                    android:text="@string/price_label"
                    android:textColor="@color/text_color_on_card"
                    android:textSize="@dimen/text_size_primary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_card_top_info"
                    android:textColor="@color/text_color_on_card"
                    android:textSize="@dimen/text_size_primary"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/tvPriceLabel"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="7355572.557575" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/padding_card"
                    android:background="@color/cardview_light_background"
                    app:layout_constraintTop_toBottomOf="@id/tvPriceLabel" />

                <TextView
                    android:id="@+id/tvMinPriceLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_card_top_info"
                    android:paddingStart="@dimen/padding_card"
                    android:paddingEnd="@dimen/padding_card"
                    android:text="@string/minimum_price_label"
                    android:textColor="@color/text_color_on_card_title"
                    android:textSize="@dimen/text_size_primary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvPriceLabel" />

                <TextView
                    android:id="@+id/tvMinPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_card_top_info"
                    android:textColor="@color/text_color_min_price"
                    android:textSize="@dimen/text_size_primary"
                    app:layout_constraintStart_toEndOf="@id/tvMinPriceLabel"
                    app:layout_constraintTop_toBottomOf="@id/tvPriceLabel"
                    tools:text="7115757.05757" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/padding_card"
                    android:background="@color/cardview_light_background"
                    app:layout_constraintTop_toBottomOf="@id/tvMinPriceLabel" />

                <TextView
                    android:id="@+id/tvMaxPriceLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_card_top_info"
                    android:paddingStart="@dimen/padding_card"
                    android:paddingEnd="@dimen/padding_card"
                    android:text="@string/maximum_price_label"
                    android:textColor="@color/text_color_on_card_title"
                    android:textSize="@dimen/text_size_primary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvMinPriceLabel" />

                <TextView
                    android:id="@+id/tvMaxPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_card_top_info"
                    android:textColor="@color/text_color_max_price"
                    android:textSize="@dimen/text_size_primary"
                    app:layout_constraintStart_toEndOf="@id/tvMaxPriceLabel"
                    app:layout_constraintTop_toBottomOf="@id/tvMinPriceLabel"
                    tools:text="78575720.15757" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/padding_card"
                    android:background="@color/cardview_light_background"
                    app:layout_constraintTop_toBottomOf="@id/tvMaxPriceLabel" />

                <TextView
                    android:id="@+id/tvLastMarketLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_card_top_info"
                    android:paddingStart="@dimen/padding_card"
                    android:paddingEnd="@dimen/padding_card"
                    android:text="@string/last_market_label"
                    android:textColor="@color/text_color_on_card_title"
                    android:textSize="@dimen/text_size_primary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvMaxPriceLabel" />

                <TextView
                    android:id="@+id/tvLastMarket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_card_top_info"
                    android:textColor="@color/text_color_on_card"
                    android:textSize="@dimen/text_size_primary"
                    app:layout_constraintStart_toEndOf="@id/tvLastMarketLabel"
                    app:layout_constraintTop_toBottomOf="@id/tvMaxPriceLabel"
                    tools:text="Bitfinex" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/padding_card"
                    android:background="@color/cardview_light_background"
                    app:layout_constraintTop_toBottomOf="@id/tvLastMarketLabel" />

                <TextView
                    android:id="@+id/tvLastUpdateLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_card_top_info"
                    android:paddingStart="@dimen/padding_card"
                    android:paddingEnd="@dimen/padding_card"
                    android:text="@string/last_updated_label"
                    android:textColor="@color/text_color_on_card_title"
                    android:textSize="@dimen/text_size_primary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvLastMarketLabel" />

                <TextView
                    android:id="@+id/tvLastUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_card_top_info"
                    android:textColor="@color/text_color_on_card"
                    android:textSize="@dimen/text_size_primary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvLastUpdateLabel"
                    app:layout_constraintTop_toBottomOf="@id/tvLastMarket"
                    tools:text="23:00:09" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>